--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="header">
-            
+            <h1>CapitalistSim</h1>
         </div>
     </body>
 </html>
