--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
         <div class="header">
             <h1>CapitalistSim</h1>
         </div>
+        <div class="diagram">
+            aa
+        </div>
+        <div class="desc">
+            aa
+        </div>
     </body>
 </html>
