--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             aa
         </div>
         <div class="desc">
-            aa
+            <h2>The Exploitation of Wages</h2>
+            <p></p>
         </div>
     </body>
 </html>
