+ first paragraph of many

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
             <h1>CapitalistSim</h1>
         </div>
         <div class="diagram">
-            aa
+            svg of wage distribution
         </div>
         <div class="desc">
             <h2>The Exploitation of Wages</h2>
-            <p></p>
+            <p>
+                As established under capitalism, the workers of a company are paid by the owners. The problem with this is owners being incentivised to pay the workers as little as possible. 
+                The difference between the wage and the value of the worker's labour is what we know as profit. 
+                The collection of profit by owners leads to exponential disparity among the wealth of the different classes. Additionally, the wealth accumulated at the very top does not trickle down to the poorest - letting some have billions and others nothing.</p>
         </div>
     </body>
 </html>
